--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
 Source: apt-setup
 Section: debian-installer
 Priority: optional
-XSBC-Original-Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
-Maintainer: Kevin Chevreuil - Kaisen <kaisen@kaisen-linux.org>
+Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
+Uploaders: Steve McIntyre <93sam@debian.org>
 Build-Depends: debhelper (>= 9), dpkg-dev (>= 1.7.0), po-debconf (>= 0.5.0)
-Vcs-Browser: https://gitlab.com/kaisenlinux/packages/apt-setup
-Vcs-Git: https://gitlab.com/kaisenlinux/packages/apt-setup.git
+Vcs-Browser: https://salsa.debian.org/installer-team/apt-setup
+Vcs-Git: https://salsa.debian.org/installer-team/apt-setup.git
 
 Package: apt-setup-udeb
 Package-Type: udeb
