--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 XSBC-Original-Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Maintainer: Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>
 Build-Depends: debhelper (>= 9), dpkg-dev (>= 1.7.0), po-debconf (>= 0.5.0)
-Vcs-Browser: https://gitlab.com/kaisenlinux/packages/apt-setup
-Vcs-Git: https://gitlab.com/kaisenlinux/packages/apt-setup.git
+Vcs-Browser: https://salsa.debian.org/installer-team/apt-setup
+Vcs-Git: https://salsa.debian.org/installer-team/apt-setup.git
 
 Package: apt-setup-udeb
 Package-Type: udeb
