--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: debian-installer
 Priority: optional
 XSBC-Original-Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Maintainer: Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>
-Build-Depends: debhelper (>= 9), dpkg-dev (>= 1.7.0), po-debconf (>= 0.5.0)
+Build-Depends: debhelper-compat (= 13), po-debconf
 Vcs-Browser: https://salsa.debian.org/installer-team/apt-setup
 Vcs-Git: https://salsa.debian.org/installer-team/apt-setup.git
 
@@ -12,7 +12,7 @@ Package-Type: udeb
 Architecture: any
 Priority: standard
 XB-Installer-Menu-Item: 7000
-Depends: apt-mirror-setup, installed-base, di-utils (>= 1.70), ${misc:Depends}
+Depends: apt-mirror-setup, installed-base, di-utils, ${misc:Depends}
 Description: Configure apt
 
 Package: apt-mirror-setup
