Import the 0.191 release

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,12 @@ Section: debian-installer
 Priority: optional
 XSBC-Original-Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Maintainer: Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>
-Build-Depends: debhelper-compat (= 13), po-debconf
+Build-Depends: debhelper-compat (= 13),
+	       po-debconf,
+               shunit2 <!nocheck>,
+               busybox <!nocheck>,
+               fakechroot <!nocheck>,
+               jq <!nocheck>,
 Vcs-Browser: https://gitlab.com/kaisenlinux/packages/apt-setup
 Vcs-Git: https://gitlab.com/kaisenlinux/packages/apt-setup.git
 
